--- a/Applet/build.xml
+++ b/Applet/build.xml
@@ -7,6 +7,7 @@
     <property name="applet.common.src" value="${basedir}/src"/>
     <property name="JCardSim.dir" value="${basedir}/JCardSimProvider"/>
     <property name="AndroidSE.dir" value="${basedir}/AndroidSEProvider"/>
+    <property name="storage" value="EEPROM"/>
     <mkdir dir="${basedir}/build"/>
   </target>
 
